<resources>
    <string name="app_name">Auto wallpaper changer</string>

    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_api_unavailable_text">%1$s requires one or more Google Play services that are not currently available. Please contact the developer for assistance.</string>
    <string name="common_google_play_services_enable_button">Enable Google Play services</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Get Google Play services</string>
    <string name="common_google_play_services_install_text_phone">%1$s won\'t run without Google Play services, which are missing from your phone.</string>
    <string name="common_google_play_services_install_text_tablet">%1$s won\'t run without Google Play services, which are missing from your tablet.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_invalid_account_text">The specified account does not exist on this device. Please choose a different account.</string>
    <string name="common_google_play_services_invalid_account_title">Invalid Account</string>
    <string name="common_google_play_services_network_error_text">A data connection is required to connect to Google Play services.</string>
    <string name="common_google_play_services_network_error_title">Network Error</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_resolution_required_text">Please complete action required by %1$s.</string>
    <string name="common_google_play_services_resolution_required_title">Google Play services requires an action</string>
    <string name="common_google_play_services_restricted_profile_text">Accessing accounts from a restricted profile is not supported.</string>
    <string name="common_google_play_services_restricted_profile_title">Restricted Profile</string>
    <string name="common_google_play_services_sign_in_failed_text">Error signing in the specified account. Please choose a different account.</string>
    <string name="common_google_play_services_sign_in_failed_title">Sign in failed</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. If the problem persists, please contact the developer for assistance.</string>
    <string name="common_google_play_services_unsupported_text">%1$s relies on Google Play services, which is not supported by your device. Contact the manufacturer for assistance.</string>
    <string name="common_google_play_services_unsupported_title">Google Play services</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_updating_title">Google Play services are updating</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="action_done">Done</string>
    <string name="action_select_all">All</string>
    <string name="bt_set_wallpaper">Set Wallpaper</string>
    <string name="change_time">Change wallpaper every:</string>
    <string name="dialog_button_cancel">Cancel</string>
    <string name="dialog_button_info_close">Close</string>
    <string name="dialog_button_no">No</string>
    <string name="dialog_button_ok">OK</string>
    <string name="dialog_button_yes">Yes</string>
    <string name="dialog_create_new_album">Creating New Album</string>
    <string name="dialog_create_new_album_sms">Enter Album\'s name</string>
    <string name="dialog_create_new_album_title">Create New Album</string>
    <string name="dialog_creating_text">Creating Album</string>
    <string name="dialog_delete_album_title">Delete Album</string>
    <string name="dialog_delete_new_album_sms">Do you want to delete this album?</string>
    <string name="dialog_edit">Edit</string>
    <string name="dialog_exit_button_neg">Cancel</string>
    <string name="dialog_exit_button_pos">Exit</string>
    <string name="dialog_exit_sms">Do you want to exit now?</string>
    <string name="dialog_exit_title">Exit Application</string>
    <string name="dialog_request_permission">You need to grant Read Storage to use this feature!</string>
    <string name="dialog_setting_sms">Setting Wallpaper</string>
    <string name="fab_add">New album</string>
    <string name="fab_delete">Delete this album</string>
    <string name="fab_sort">Sort by name</string>
    <string name="info">     Wallpaper Changer - Pro version is going to gives you a really unique and novel wallpaper style. You can select multiple photos in gallery easily and setting them as wallpaper at the same time as on Windows.\10In additon, the application also provides a lot of nice wallpapers with Full HD resolution under three themes: Natural, Universe, Car, it will help you decorate your love smartphone comfortably.\10It also optimized to increase performance and save battery power, thus setting many constantly changing backgrounds do not waste much battery.\10\10 Feature:\10 ◆ Setting wallpaper with available photos\10 ◆ Setting wallpaper from gallery\10 ◆ Setting time to change wallpaper\10 ◆ Display wallpaper under two style: crop or full\10 ◆ Stop slide show if battery is low \10\10 Developer: HeroNup Studio\10 Email: heronupstudio@gmail.com\10</string>
    <string name="lable_available">Available</string>
    <string name="lable_select_photo">Select Photos</string>
    <string name="lable_your_image">Your Images</string>
    <string name="nav_available">Available</string>
    <string name="nav_help">Help &amp; feedback</string>
    <string name="nav_setting">Settings</string>
    <string name="nav_share">Share</string>
    <string name="nav_your_album">Your Albums</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="notification_battery_low">Wallpaper Changer stopped slide show. Charge and set wallpaper agian!</string>
    <string name="request_permission_error">Request READ_EXTERNAL_STORAGE permission error!</string>
    <string name="setting_auto_crop">Do not crop photo automatically</string>
    <string name="setting_battery_title">When battery low, turn on the slide show to save power</string>
    <string name="setting_pause_slide">When battery low, pause the slide show to save power</string>
    <string name="text_no_album"> No any album</string>
    <string name="title_share">Share with</string>
    <string name="toast_create_album_complete">Create Album Completed!</string>
    <string name="toast_name_empty">The Album\'s name must be not empty!</string>
    <string name="toast_name_exist">This name has really existed. Use an other name!</string>
    <string name="toast_no_image_selected">No image selected</string>
    <string name="toast_selected">Selected</string>
    <string name="toast_set_complete">Set Wallpaper Successfully!</string>
    <string name="toast_stopped_slide_show">Battery is low, stopped wallpaper slide show!</string>
    <string name="accept">Accept</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="create_calendar_message">Allow Ad to create a calendar event?</string>
    <string name="create_calendar_title">Create calendar event</string>
    <string name="decline">Decline</string>
    <string name="default_web_client_id">557847069915-9auerfkjiku1jvgdgfj6d1mcthbhr9eo.apps.googleusercontent.com</string>
    <string name="firebase_database_url">https://admob-app-id-2236614912.firebaseio.com</string>
    <string name="gcm_defaultSenderId">557847069915</string>
    <string name="google_api_key">AIzaSyAEdvDAQ1QA-rsWydGbFHxEapFaytEXzKc</string>
    <string name="google_app_id">1:557847069915:android:75b9343767866ab7</string>
    <string name="google_crash_reporting_api_key">AIzaSyAEdvDAQ1QA-rsWydGbFHxEapFaytEXzKc</string>
    <string name="google_storage_bucket">admob-app-id-2236614912.appspot.com</string>
    <string name="store_picture_message">Allow Ad to store image in Picture gallery?</string>
    <string name="store_picture_title">Save image</string>
</resources>
