<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:id="@+id/your_album_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5">

        <TextView
            android:textSize="18sp"
            android:gravity="center"
            android:layout_gravity="center"
            android:id="@+id/text_no_album"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_no_album"
            android:alpha="0.7"/>

        <GridView
            android:gravity="center"
            android:id="@+id/c_gridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="3dp"
            android:verticalSpacing="3dp"
            android:stretchMode="columnWidth"
            android:numColumns="auto_fit"/>

        <LinearLayout
            android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="240dp">

            <TextView
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:id="@+id/txt_fab1"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_add"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab3"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"
                android:src="@drawable/ic_plus"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="170dp">

            <TextView
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:id="@+id/txt_fab2"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_sort"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab2"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"
                android:src="@drawable/ic_sort"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp">

            <TextView
                android:textSize="18sp"
                android:typeface="serif"
                android:textColor="@color/colorPrimary"
                android:layout_gravity="center"
                android:id="@+id/txt_fab3"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fab_delete"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab1"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"
                android:src="@drawable/ic_delete"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"
                app:backgroundTint="@color/colorPrimary"/>

        </LinearLayout>

        <LinearLayout
            android:layout_gravity="bottom|right|center_vertical|center_horizontal|center|end"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_gravity="center"
                android:id="@+id/click_here"
                android:visibility="visible"
                android:layout_width="170dp"
                android:layout_height="40dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/clickhere"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_fab_app"
                app:elevation="6dp"
                app:pressedTranslationZ="12dp"/>

        </LinearLayout>

    </FrameLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="20dp"
        android:layout_weight="1"
        android:visibility="gone"
        android:id="@+id/spinner_your_album">

        <LinearLayout
            android:layout_gravity="bottom|center_vertical|center_horizontal|center"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="4">

            <TextView
                android:textSize="16sp"
                android:textColor="#000000"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/change_time"/>

            <Spinner
                android:entries="@array/set_time"
                android:id="@+id/c_spinner_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginRight="5dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:textColor="#000000"
        android:layout_gravity="bottom|center_vertical|center_horizontal|center"
        android:id="@+id/c_bt_set"
        android:background="@drawable/shape"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/bt_set_wallpaper"
        android:onClick="setWallpaper"
        android:visibility="gone"/>
    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        android:layout_gravity="center"
        ads:adUnitId="ca-app-pub-3940256099942544/6300978111"
        tools:ignore="MissingConstraints,NotSibling"
        />
</LinearLayout>
